@@ -47,9 +47,6 @@ public:
 
     virtual String cssText() const;
 
-    // Not part of the CSSOM
-    virtual bool parseString(const String&, bool = false);
-
     void adoptSelectorVector(Vector<OwnPtr<CSSParserSelector> >& selectors) { m_selectorList.adoptSelectorVector(selectors); }
     void setDeclaration(PassRefPtr<CSSMutableStyleDeclaration>);
 
