@@ -1,3 +1,15 @@
+2011-11-01  Andreas Kling  <kling@webkit.org>
+
+        CSS: Remove unused virtual parseString() in style and keyframe rules.
+        https://bugs.webkit.org/show_bug.cgi?id=71300
+
+        Reviewed by Darin Adler.
+
+        * css/CSSStyleRule.cpp:
+        * css/CSSStyleRule.h:
+        * css/WebKitCSSKeyframeRule.cpp:
+        * css/WebKitCSSKeyframeRule.h:
+
 2011-11-01  Emil A Eklund  <eae@chromium.org>
 
         Switch RenderObject to layout abstraction
